<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/ListViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/SendBtn"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />
    <Button
        android:id="@+id/SendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/SendBtn"/>
    <EditText
        android:id="@+id/EditSendTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/SendBtn"
        android:layout_toLeftOf="@id/ReceiverBtn"
        android:hint="@string/SendTxtHint"/>
    <Button
        android:id="@+id/ReceiverBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ReceiveBtn"/>
</RelativeLayout>